k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: conscious-bridge-service
spec:
  selector:
    app: conscious-bridge
  ports:
  - port: 80
    targetPort: 5000
  type: LoadBalancer
